--- a/buttons.css
+++ b/buttons.css
@@ -32,6 +32,8 @@ Basic button functions
 
 
 
+
+
 /* Show more */
 .showMore {
     width: 150px;
@@ -72,7 +74,6 @@ Basic button functions
 }
 
 
-
 /******************************
             Animations 
 *******************************/
@@ -99,6 +100,7 @@ button:focus {
     box-shadow: 0 0 5px rgb(0, 0, 0);
 }
 
+
 /********************************
 Functionality
 *********************************/
@@ -107,3 +109,61 @@ Functionality
     opacity: 0.7;
     cursor: not-allowed;
 }
+
+/*********************************
+Menu buttons
+*********************************/
+.menuButton{
+    position: relative;  
+    width: 60px;
+    height: 45px;
+    cursor: pointer;
+    
+}
+
+.menuButton > .bar1, .bar2, .bar3 {
+    position: absolute;
+    display:  block;
+    width: 100%;
+    height: 9px;
+    background-color: rgb(0, 0, 0);
+    margin: 6px 0;
+    border-radius: 9px;    
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.menuButton > .bar1 {
+    top: 0px;
+}
+
+.menuButton > .bar2 {
+    top: 15px;
+}
+
+.menuButton > .bar3 {
+    top: 30px;
+}
+
+.animateMenu .bar2 {
+    opacity: 0;
+}
+
+.animateMenu .bar1 {
+    -webkit-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    top: 15px;
+}
+
+.animateMenu .bar3 {
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+    top: 15px;
+}
+
+/****************************************
+End of menu button
+*****************************************/
+
